--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <footer><p>dev.finance$</p></footer>
+        <footer><p>dev.finance$ </p><a href="https://github.com/juanvieiraprado99/dev.finances">github</a></footer>
 
         
         <script src="//js.zapjs.com/js/download.js"></script>
